<?xml version="1.0"?>
<package format="2">
  <name>pmb2_mujoco</name>
  <version>1.0.0</version>
  <description>PMB2 MuJoCo ROS configuration</description>

  <!-- <url type="repository">https://github.com/ubi-agni/mujoco_hog_plugin</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_hog_plugin/issues</url> -->

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author>David Leins</author>
  <author>Jonas Zilke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mujoco_ros</exec_depend>
  <exec_depend>mujoco_ros_control_pal</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend>pmb2_controller_configuration</exec_depend>
  <exec_depend>pmb2_controller_configuration_gazebo</exec_depend>
  <exec_depend></exec_depend>
  <exec_depend></exec_depend>

</package>
