<?xml version="1.0"?>
<package format="2">
  <name>pmb2_controller_configuration_mujoco</name>
  <version>1.0.0</version>
  <description>PMB2 Controller Configuration MuJoCo</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>mujoco_ros_control_pal</exec_depend>

</package>
