<?xml version="1.0"?>
<package format="2">
  <name>pmb2_simulation_mujoco</name>
  <version>1.0.0</version>
  <description>PMB2-Specific MuJoCo ROS components</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author>David Leins</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb2_mujoco</exec_depend>
  <exec_depend>pmb2_controller_configuration_mujoco</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
